swith to cloud deepTMHMM

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -178,16 +178,16 @@ MAFLIILITCFVIILATSQPCQTPDDFVAATSPGHIIIGGLFAIHEKMLSSEDSPRRPQIQECVGFEISVFLQTLAMIHS
                                         <hr>
                                         <div class="row">
                                             <div class="col col-lg-2 shiftdown">
-                                                <label class="tool">TMHMM</label>    
+                                                <label class="tool">DeepTMHMM</label>    
                                             </div>
                                             <div class="col col-lg-1 shiftdown">
                                                 <input
-                                                name='tmhmm'
+                                                name='deeptmhmm'
                                                 class='switch_checkbox' 
                                                 type="checkbox" 
-                                                id="tmhmm_switch" 
+                                                id="deeptmhmm_switch" 
                                                 checked="checked"/>
-                                                <label for="tmhmm_switch" class="switchlabel"></label>
+                                                <label for="deeptmhmm_switch" class="switchlabel"></label>
                                             </div>
                                                     
                                         </div>
