switch to GitHub

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -242,7 +242,7 @@ MAFLIILITCFVIILATSQPCQTPDDFVAATSPGHIIIGGLFAIHEKMLSSEDSPRRPQIQECVGFEISVFLQTLAMIHS
         <section>
             <div class="container col text-center givecredit">
                 <p style="font-size: 22px">
-                    CDvist has ben refactored. We will continue to improve the webserver. Please let us know any problems and requests at our BitBucket page or via <a href="mailto:oadebali@sabanciuniv.edu">direct contact</a>.
+                    Latest update: 2025 June. CDvist has ben refactored. We will continue to improve the webserver. Please let us know any problems and requests at our GitHub page or via <a href="mailto:oadebali@sabanciuniv.edu">direct contact</a>.
                 </p>
             </div>
         </section>
@@ -300,7 +300,7 @@ MAFLIILITCFVIILATSQPCQTPDDFVAATSPGHIIIGGLFAIHEKMLSSEDSPRRPQIQECVGFEISVFLQTLAMIHS
                 </div>
                 <div class="row middle">
                     <div class="col text-center givecredit">
-                        Download dockerized CDvist package from <a href="https://bitbucket.org/adebali/cdvist">BitBucket!</a>
+                        Download dockerized CDvist package from <a href="https://github.com/adebali/cdvistapp">GitHub!</a>
 
                     </div>
                 </div>
